--- a/index.html
+++ b/index.html
@@ -478,12 +478,12 @@
     <script>
         // Konfigurasi Firebase - GANTI dengan konfigurasi project Firebase Anda
         const firebaseConfig = {
-            apiKey: "AIzaSyDzlChP0bHJtidgKxnEkCLr9Q4qHK2xfEg",
-            authDomain: "band-cb1aa.firebaseapp.com",
-            projectId: "band-cb1aa",
-            storageBucket: "band-cb1aa.firebasestorage.app",
-            messagingSenderId: "903647081592",
-            appId: "1:903647081592:web:d3e9c873808256b4b3298d"
+            apiKey: "AIzaSyA19Q4AfiO6f8HDXl8XuFYL3uxwoTp0OSM",
+            authDomain: "absensi-band.firebaseapp.com",
+            projectId: "absensi-band",
+            storageBucket: "absensi-band.firebasestorage.app",
+            messagingSenderId: "808649988323",
+            appId: "1:808649988323:web:bd182d72f2dc7227ec8dd6"
         };
 
         // Inisialisasi Firebase
